objects/Commission__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unternehmen</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Kunde, Lebensversicherung, Fahrzeughersteller, Rechtsschutzversicherung, Gericht, Kanzlei</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provisionen (Unternehmen)</relationshipLabel>
        <relationshipName>Provisionen</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Dg__c</fullName>
        <label>Betrag Dieselschaden</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Lv__c</fullName>
        <label>Betrag Lebensversicherung</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CREATEDDATE_Old__c</fullName>
        <label>CREATEDDATE_Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Dg__c</fullName>
        <label>Provisionssatz Dieselskandal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Lv__c</fullName>
        <label>Provisionssatz Lebensversicherung</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>END_DATE_old_C__c</fullName>
        <description>old end date</description>
        <label>END_DATE_old__C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Enddatum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_old__c</fullName>
        <label>ID_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Kanzlei</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Kanzlei</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provisionen (Kanzlei)</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <defaultValue>'Dieselskandal'</defaultValue>
        <label>Produkt</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Families</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProviImpID__c</fullName>
        <externalId>true</externalId>
        <label>ProviImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_DATE_old_C__c</fullName>
        <description>old start date</description>
        <label>START_DATE_old__C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Startdatum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <description>Used to create and store the documents with the commission details</description>
    <label>Provision</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisionen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Legal_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>